--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: SpaceFighter
 main: com.muwbi.devathlon.SpaceFighter
 version: 1.0-SNAPSHOT
+load: POSTWORLD
 commands:
   gamestate:
     description: Change gamestate
